# spis2022-Mohammed-Nata-Webscraper

./: database_setup.py  main.py  pyproject.toml  replit.nix  scraper.py
templates/: collapseTest.html  home.html  index.html  layout.html  listings.html  logged_in.html  login.html  logout.html  navbar.html  register.html  scraper.html  scraperWIP.html
